# AMKy-Daemon

./: .gitignore  .gitmodules  CMakeLists.txt
daemon/: CMakeLists.txt
daemon/src/: config.hpp  main.cpp
daemon/src/command-line/: CommandDispatcher.cpp  CommandDispatcher.hpp  CommandLineParser.cpp  CommandLineParser.hpp
lib/: CMakeLists.txt
lib/src/: DaemonHost.cpp  DaemonHost.hpp  type-definitions.hpp
lib/src/config/: Configuration.cpp  Configuration.hpp
lib/src/core/: AsyncTask.cpp  AsyncTask.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadPoolJobInfo.cpp  ThreadPoolJobInfo.hpp  _Include.hpp
lib/src/download/: DownloadItem.cpp  DownloadItem.hpp  DownloadManager.cpp  DownloadManager.hpp  HttpStream.cpp  HttpStream.hpp
lib/src/exceptions/: AMKyException.cpp  AMKyException.hpp
lib/src/http/: HttpClient.hpp  HttpClient.nix.cpp  HttpClient.win.cpp  HttpStream.cpp  HttpStream.hpp
lib/src/lib/: Buffer.cpp  Buffer.hpp  String.cpp  String.hpp  type-definitions.hpp
lib/src/upnp/: UPNPGatewayManager.cpp  UPNPGatewayManager.hpp
src/download/: download-manager.h
